hopefully fixed random new lines